test/bad/generics/call01.px

func f<Num T>(T x) def
    return

f('x')
